--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib packages/index.js"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "sass-loader": "^12.6.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -19,6 +21,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^7.0.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
